--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
+    "reflect-metadata": "^0.2.2",
     "winston": "^3.18.3"
   },
   "devDependencies": {
