--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
     "winston": "^3.18.3"
   },
   "devDependencies": {
